ЭТАП 2: добавлена ручка валидации можно ли взять кредит, исправлена логика платежей, кредит берется на определенное количество дней. Добавлена ручка предрасчета перевода из одной валюты в другую
